Added logic to download files, given a file containing a list of urls. Still need to fill out docs.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,33 +1,20 @@
-# This file is used to configure your project.
-# Read more about the various options under:
-# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
-# https://setuptools.pypa.io/en/latest/references/keywords.html
-
 [metadata]
 name = sourceplus-sdk
-description = Add a short description here!
+description = Source.Plus SDK
 author = Nick Padgett
-author_email = nickpadge@gmail.com
+author_email = nick@spawning.ai
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
-# Add here related links, for example:
+url = https://github.com/Spawning-Inc/sourceplus-sdk/
+
 project_urls =
     Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
-#    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
-#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
-#    Download = https://pypi.org/project/PyScaffold/#files
-#    Twitter = https://twitter.com/PyScaffold
+    Source = https://github.com/pyscaffold/pyscaffold/
 
-# Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 
-# Add here all kinds of additional classifiers as defined under
-# https://pypi.org/classifiers/
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
@@ -40,15 +27,14 @@ include_package_data = True
 package_dir =
     =src
 
-# Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.8
 
-# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
-# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
-# new major versions. This works if the required packages follow Semantic Versioning.
-# For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    httpx
+    pandas
+    fastparquet
+    aiofiles
 
 
 [options.packages.find]
@@ -68,15 +54,8 @@ testing =
     pytest-cov
 
 [options.entry_points]
-# Add here console scripts like:
-# console_scripts =
-#     script_name = sourceplus_sdk.module:function
-# For example:
-# console_scripts =
-#     fibonacci = sourceplus_sdk.skeleton:run
-# And any other entry points, for example:
-# pyscaffold.cli =
-#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
+console_scripts =
+    sourceplus = sourceplus_sdk:run
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
