--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sourceplus-sdk
-description = Source.Plus SDK
+description = Search, curate, and enrich collections for AI training.
 author = Nick Padgett
 author_email = nick@spawning.ai
 license = MIT
