Adding links to pypi and readthedocs

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,10 @@ long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/Spawning-Inc/sourceplus-sdk/
 
 project_urls =
-    Documentation = https://pyscaffold.org/
-    Source = https://github.com/pyscaffold/pyscaffold/
+    Documentation = https://sourceplus-sdk.readthedocs.io/en/latest/
+    Source = https://github.com/Spawning-Inc/sourceplus-sdk
+    Tracker = https://github.com/Spawning-Inc/sourceplus-sdk/issues
+    Changelog = https://sourceplus-sdk.readthedocs.io/en/latest/changelog.html
 
 platforms = any
 
